<resources>
    <string name="the_calorie_wizard">The Calorie Wizard</string>
    <string name="create_an_account">Create an Account</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="hey_let_s_create_your_account_and_customise_thecaloriewizard_to_your_goals">Hey! Let\'s create your account and customise TheCalorieWizard to your goals.</string>
    <string name="or">or</string>
    <string name="continue_text">Continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="goals_text">Let\'s start with your goals. Select up to 5 goals that are the most important to you</string>
    <string name="barriers_text">Okay good! Now let\'s reflect on what barriers usually prevent you from achieving your goals.</string>
    <string name="okay_this_is_great_tell_us_a_little_about_yourself_now">Okay. This is great! Tell us a little about yourself now.</string>
    <string name="brilliant_you_re_doing_well_now_we_need_you_to_provide_a_realistic_gauge_on_your_activity_levels">Brilliant! You\'re doing well. Now we need you to provide a realistic gauge on your activity levels.</string>
    <string name="weekly_goals_text">Okay! What are your weekly goals?</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_home">Home</string>
    <string name="title_food_diary">Food Diary</string>
    <string name="app_settings">Application Settings</string>
    <string name="update_account">Update Account</string>
    <string name="add_food_item">Add Food</string>
    <string name="delete">Delete</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="weight_tracking">Weight Tracking</string>
    <string name="age">Age</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="next">Next</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="portion_size_value">Portion Size Value</string>
    <string name="calories">Calories</string>
    <string name="carbs_g">Carbs (g)</string>
    <string name="fats_g">Fats (g)</string>
    <string name="proteins_g">Proteins (g)</string>
    <string name="fibre_g">Fibre (g)</string>
    <string name="sugar_g">Sugar (g)</string>
    <string name="saturated_fat_g">Saturated Fat (g)</string>
    <string name="polyunsaturated_fat_g">Polyunsaturated Fat (g)</string>
    <string name="monounsaturated_fat_g">Monounsaturated Fat (g)</string>
    <string name="cholesterol_mg">Cholesterol (mg)</string>
    <string name="sodium_mg">Sodium (mg)</string>
    <string name="potassium_mg">Potassium (mg)</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="stone">Stone</string>
    <string name="pounds">Pounds</string>
    <string name="nutrients_consumed">Nutrients Consumed</string>
    <string name="calories_n1200kcal">Calories\n1200kcal</string>
    <string name="carbs_n110g">Carbs\n110g</string>
    <string name="fats_n68g">Fats\n68g</string>
    <string name="proteins_n110g">Proteins\n110g</string>
    <string name="goal_stone">Goal Stone</string>
    <string name="goal_pounds">Goal Pounds</string>
    <string name="current_weight">Current Weight:</string>
    <string name="_150_lbs">150 lbs</string>
    <string name="_130_lbs">130 lbs</string>
    <string name="remaining_loss_gain">Remaining Loss/Gain:</string>
    <string name="_20_lbs">20 lbs</string>
    <string name="enter_your_weigh_in">Enter your weigh-in</string>
    <string name="submit">Submit</string>
    <string name="recent_weigh_ins">Recent Weigh-Ins</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="_25_0">25.0</string>
    <string name="overweight">Overweight</string>
    <string name="bmi_categories">BMI Categories:</string>
    <string name="underweight_lt_18_5"><![CDATA[Underweight: < 18.5]]></string>
    <string name="normal_weight_18_5_24_9">Normal weight: 18.5 – 24.9</string>
    <string name="overweight_25_29_9">Overweight: 25 – 29.9</string>
    <string name="obesity_lt_30"><![CDATA[Obesity: <= 30]]></string>
    <string name="food_item_food_name">Food Item: FOOD NAME</string>
    <string name="calories_0">Calories: 0</string>
    <string name="carbs_0g">Carbs: 0g</string>
    <string name="fats_0g">Fats: 0g</string>
    <string name="proteins_0g">Proteins: 0g</string>
    <string name="today_s_macros">Today\'s Macros</string>
    <string name="_2500">2500</string>
    <string name="carbs">Carbs</string>
    <string name="_300g">300g</string>
    <string name="fats">Fats</string>
    <string name="_70g">70g</string>
    <string name="proteins">Proteins</string>
    <string name="_120g">120g</string>
    <string name="meal_name">Meal Name</string>
    <string name="sample_text">Sample Text</string>
    <string name="water_intake">Water Intake</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="recommended_water_intake_6_8_glasses_250ml_each_per_day">Recommended Water Intake: 6 – 8 glasses (250ml each) per day</string>
</resources>