<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:outlineProvider="bounds"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:elevation="2dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/water_intake"
        android:textStyle="bold"
        android:textColor="@color/textColorBlack"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/advent_pro_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/buttonDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textColor="@color/textColorButtonSecondary"
            android:backgroundTint="@color/tea_green"
            android:textSize="20sp"
            android:fontFamily="@font/advent_pro_bold"
            android:padding="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textViewWaterAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/textColorBlack"
            android:textSize="24sp"
            android:fontFamily="@font/advent_pro_bold"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/buttonIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textColor="@color/textColorButtonSecondary"
            android:backgroundTint="@color/nyanza"
            android:textSize="20sp"
            android:fontFamily="@font/advent_pro_bold"
            android:padding="8dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommended_water_intake_6_8_glasses_250ml_each_per_day"
        android:textColor="@color/textColorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/advent_pro_bold"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>

</LinearLayout>
