<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:outlineProvider="bounds"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:elevation="2dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today_s_macros"
        android:textStyle="bold"
        android:textColor="@color/textColorBlack"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/advent_pro_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <!-- Calories Box -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/nyanza"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewCaloriesValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2500"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <!-- Carbs Box -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/tea_green"
            android:padding="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/carbs"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewCarbsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_300g"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <!-- Fats Box -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/primaryLightColor"
            android:padding="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fats"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewFatsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_70g"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <!-- Proteins Box -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/primaryColor"
            android:padding="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proteins"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewProteinsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_120g"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                android:fontFamily="@font/advent_pro_bold"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
