<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/cultured">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFoodItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_item_food_name"
                    android:textSize="16sp"
                    android:textColor="@color/textColorBlack"
                    android:fontFamily="@font/advent_pro_bold"
                    android:paddingBottom="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewRemove"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/delete"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:fontFamily="@font/advent_pro_bold"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/textViewCalories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories_0"
                android:textSize="14sp"
                android:textColor="@color/textColorBlack"
                android:fontFamily="@font/advent_pro_bold"/>

            <TextView
                android:id="@+id/textViewCarbs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/carbs_0g"
                android:textSize="14sp"
                android:textColor="@color/textColorBlack"
                android:fontFamily="@font/advent_pro_bold"/>

            <TextView
                android:id="@+id/textViewFats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fats_0g"
                android:textSize="14sp"
                android:textColor="@color/textColorBlack"
                android:fontFamily="@font/advent_pro_bold"/>

            <TextView
                android:id="@+id/textViewProteins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proteins_0g"
                android:textSize="14sp"
                android:textColor="@color/textColorBlack"
                android:fontFamily="@font/advent_pro_bold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
